Fixed bogus assert in greedy register allocator (bug 667601, r=adrake).